# petibm-rollingpitching

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  default.css  index.html  slides.md
data/: kinematics.ipynb  li_dong_2016_fig4a.csv  li_dong_2016_fig4b.csv  li_dong_2016_fig9b.csv  li_dong_2016_fig9c.csv  wing.body
docker/: Docker.version  Dockerfile  Dockerfile-dbg  Dockerfile-petibm0.4.1-xenial  Dockerfile-petibm0.4.1-xenial2  Dockerfile-petibm0.4.2-xenial  Dockerfile-petibm0.5-xenial  Dockerfile-petibm0.5.1-xenial  Dockerfile-prepost-xenial
misc/: deletedatasets.py  listfigures.py  repro-packs-on-aws.md  repro-packs.py  repro-packs.yaml  rsyncfigures.sh  running-on-aws.md
runs/: README.md
runs/Re100_St0.6_AR1.27_psi90/: README.md  config.yaml  pegasus.slurm
runs/Re100_St0.6_AR1.27_psi90/scripts/: compute_wx_cc.py  create_body.py  create_mesh_yaml.py  create_probes_yaml.py  get_propulsive_efficiency.py  plot_force_coefficients.py  plot_velocity_probes.py  plot_wx_slices.py  print_kinematics.py
runs/Re200_St0.4_AR1.27_psi90/: README.md  config.yaml  pegasus.slurm  probes.yaml
runs/Re200_St0.4_AR1.27_psi90/scripts/: compute_qcrit.py  create_body.py  create_mesh_yaml.py  create_probes_yaml.py  create_qcrit_wx_cc_xdmf.py  generate_figures.sh  get_propulsive_efficiency.py  plot_force_coefficients.py  plot_velocity_probes.py  plot_wx_slices.py  print_kinematics.py  process_qcrit_wx_snapshot.py  visit_plot_qcrit_wx.py  visit_top_view3d.yaml
runs/Re200_St0.6_AR1.27_psi100/: README.md  config.yaml  pegasus.slurm
runs/Re200_St0.6_AR1.27_psi100/scripts/: create_body.py  create_mesh_yaml.py  create_probes_yaml.py  get_propulsive_efficiency.py  plot_force_coefficients.py  plot_velocity_probes.py  plot_wx_slices.py  print_kinematics.py  process_qcrit_wx_snapshot.py
runs/Re200_St0.6_AR1.27_psi110/: README.md  config.yaml  pegasus.slurm
runs/Re200_St0.6_AR1.27_psi110/scripts/: create_body.py  create_mesh_yaml.py  create_probes_yaml.py  get_propulsive_efficiency.py  plot_force_coefficients.py  plot_velocity_probes.py  plot_wx_slices.py  print_kinematics.py  process_qcrit_wx_snapshot.py  visit_lateral_view3d.yaml  visit_plot_qcrit_wx.py
runs/Re200_St0.6_AR1.27_psi120/: README.md  config.yaml  pegasus.slurm
runs/Re200_St0.6_AR1.27_psi120/scripts/: create_body.py  create_mesh_yaml.py  create_probes_yaml.py  get_propulsive_efficiency.py  plot_force_coefficients.py  plot_velocity_probes.py  plot_wx_slices.py  print_kinematics.py  process_qcrit_wx_snapshot.py
runs/Re200_St0.6_AR1.27_psi60/: README.md  config.yaml  pegasus.slurm
runs/Re200_St0.6_AR1.27_psi60/scripts/: create_body.py  create_mesh_yaml.py  create_probes_yaml.py  get_propulsive_efficiency.py  plot_force_coefficients.py  plot_velocity_probes.py  plot_wx_slices.py  print_kinematics.py
runs/Re200_St0.6_AR1.27_psi70/: README.md  config.yaml  pegasus.slurm
runs/Re200_St0.6_AR1.27_psi70/scripts/: compute_wx_cc.py  create_body.py  create_mesh_yaml.py  create_probes_yaml.py  get_propulsive_efficiency.py  plot_force_coefficients.py  plot_velocity_probes.py  plot_wx_slices.py  print_kinematics.py
runs/Re200_St0.6_AR1.27_psi80/: README.md  config.yaml  pegasus.slurm
runs/Re200_St0.6_AR1.27_psi80/scripts/: create_body.py  create_mesh_yaml.py  create_probes_yaml.py  create_qcrit_wx_cc_xdmf.py  get_propulsive_efficiency.py  plot_force_coefficients.py  plot_velocity_probes.py  plot_wx_slices.py  print_kinematics.py
runs/Re200_St0.6_AR1.27_psi90/: README.md  config.yaml  pegasus.slurm
runs/Re200_St0.6_AR1.27_psi90/scripts/: compute_qcrit.py  compute_wx_cc.py  create_body.py  create_mesh_yaml.py  create_probes_yaml.py  create_qcrit_wx_cc_xdmf.py  generate_figures.sh  get_propulsive_efficiency.py  plot_force_coefficients.py  plot_meshgrid.py  plot_velocity_probes.py  plot_vorticity_slices.py  plot_wx_slices.py  process_qcrit_wx_snapshot.py  process_qcrit_wx_snapshot_zoom.py  visit_plot_qcrit_wx.py  visit_plot_qcrit_wx_zoom.py  wx_slices_annotations.yaml
runs/Re200_St0.6_AR1.91_psi90/: README.md  config.yaml  pegasus.slurm  probes.yaml
runs/Re200_St0.6_AR1.91_psi90/scripts/: compute_qcrit.py  create_body.py  create_mesh_yaml.py  create_probes_yaml.py  generate_figures.sh  get_propulsive_efficiency.py  plot_force_coefficients.py  plot_velocity_probes.py  plot_vorticity_slices.py  plot_wx_slices.py  print_kinematics.py  process_qcrit_wx_snapshot_zoom.py  qcrit_wx_snapshot_zoom.yaml
runs/Re200_St0.6_AR2.55_psi90/: README.md  config.yaml  pegasus.slurm  probes.yaml
runs/Re200_St0.6_AR2.55_psi90/scripts/: compute_qcrit.py  compute_wx_cc.py  create_body.py  create_mesh_yaml.py  create_probes_yaml.py  plot_vorticity_slices.py  print_kinematics.py  qcrit_wx_snapshot_zoom.yaml  visit_perspective_zoom_view3d.yaml  visit_plot_qcrit_wx_zoom.py
runs/Re200_St0.8_AR1.27_psi90/: README.md  config.yaml  pegasus.slurm  probes.yaml
runs/Re200_St0.8_AR1.27_psi90/scripts/: create_body.py  create_mesh_yaml.py  create_probes_yaml.py  get_propulsive_efficiency.py  plot_force_coefficients.py  plot_velocity_probes.py  plot_wx_slices.py  print_kinematics.py  process_qcrit_wx_snapshot.py  visit_perspective_view3d.yaml
runs/Re200_St1.0_AR1.27_psi90/: README.md  config.yaml  pegasus.slurm  probes.yaml
runs/Re200_St1.2_AR1.27_psi90/: README.md  config.yaml  pegasus.slurm  probes.yaml
runs/Re400_St0.6_AR1.27_psi90/: README.md  config.yaml  pegasus.slurm
runs/independence/: README.md
runs/scripts/: generate_all_figures.sh  generate_figures.sh  plot_efficiency_compare_St.py  plot_efficiency_compare_psi.py  plot_force_coefficients_compare_AR.py  plot_force_coefficients_compare_Re.py  plot_force_coefficients_compare_psi.py
singularity/: Singularity  Singularity.bionic  Singularity.latest-dbg  Singularity.petibm0.4.2-xenial  Singularity.petibm0.5-xenial  Singularity.petibm0.5.1-xenial  Singularity.test  Singularity.xenial  Singularity.xenial2
src/: config.h.in  main.cpp  rollingpitching.cpp  rollingpitching.h
src/python/: MANIFEST.in  regularize.py  setup.py  visitplot.py
src/python/rodney/: misc.py  (+6 more)
(+136 files in other folders)
